test/preprocessor/invalid/extension.glsl
#extension
#extension this_ext
#extension this_other_ext :
#extension yet_another_ext : invalid_behavior
#extension that_fancy_ext : 42

#extension
line_skip1 : require

#extension line_skip2
: require

#extension line_skip3 :
require